--- a/css/main.css
+++ b/css/main.css
@@ -1,37 +1,37 @@
 /* global */
-@import url("_normalize.css");
-@import url("_fonts.css");
-@import url("_vars.css");
-@import url("_settings.css");
+@import "_normalize.css";
+@import "_fonts.css";
+@import "_vars.css";
+@import "_settings.css";
 
 /* blocks */
-@import url("blocks/_btn.css");
-@import url("blocks/_stepper.css");
-@import url("blocks/_grid.css");
-@import url("blocks/_header.css");
-@import url("blocks/_logo.css");
-@import url("blocks/_nav.css");
-@import url("blocks/_centered.css");
-@import url("blocks/_title.css");
-@import url("blocks/_form.css");
-@import url("blocks/_social.css");
-@import url("blocks/_hero.css");
-@import url("blocks/_benefits.css");
-@import url("blocks/_products.css");
-@import url("blocks/_product.css");
-@import url("blocks/_newsletter.css");
-@import url("blocks/_about.css");
-@import url("blocks/_footer.css");
+@import "blocks/_btn.css";
+@import "blocks/_stepper.css";
+@import "blocks/_grid.css";
+@import "blocks/_header.css";
+@import "blocks/_logo.css";
+@import "blocks/_nav.css";
+@import "blocks/_centered.css";
+@import "blocks/_title.css";
+@import "blocks/_form.css";
+@import "blocks/_social.css";
+@import "blocks/_hero.css";
+@import "blocks/_benefits.css";
+@import "blocks/_products.css";
+@import "blocks/_product.css";
+@import "blocks/_newsletter.css";
+@import "blocks/_about.css";
+@import "blocks/_footer.css";
 /* about */
-@import url("blocks/_notice.css");
-@import url("blocks/_about-hero.css");
-@import url("blocks/_brand-info.css");
+@import "blocks/_notice.css";
+@import "blocks/_about-hero.css";
+@import "blocks/_brand-info.css";
 /* catalog */
-@import url("blocks/_inner-hero.css");
-@import url("blocks/_catalog.css");
-@import url("blocks/_filters.css");
-@import url("blocks/_custom-checkbox.css");
+@import "blocks/_inner-hero.css";
+@import "blocks/_catalog.css";
+@import "blocks/_filters.css";
+@import "blocks/_custom-checkbox.css";
 /* product-info */
-@import url("blocks/_product-info.css");
+@import "blocks/_product-info.css";
 /* cart */
-@import url("blocks/_cart.css");
+@import "blocks/_cart.css";
