--- a/css/blocks/custom-checkbox.css
+++ b/css/blocks/custom-checkbox.css
@@ -39,3 +39,9 @@
 .custom-checkbox__input:checked + .custom-checkbox__icon::after{
     opacity: 1;
 }
+
+
+.custom-checkbox__input:focus-visible + .custom-checkbox__icon {
+  outline: 2px dashed var(--primary);
+  outline-offset: var(--outline-offset);
+}
