--- a/css/blocks/product.css
+++ b/css/blocks/product.css
@@ -30,8 +30,9 @@
 .product__link {
   color: inherit;
   text-decoration: none;
+  transition: var(--main-trans);
 }
-.product__link::after{
+.product__link::after {
   content: "";
   position: absolute;
   inset: 0;
@@ -42,7 +43,25 @@
   line-height: 150%;
   color: var(--dark-primary);
 }
-.products__btn{
+.products__btn {
   display: inline-block;
-  
 }
+
+.product__link:focus {
+  outline: none;
+}
+
+.product__link:focus-visible::after{
+  outline: 2px dashed var(--dark-primary);
+  outline-offset: var(--outline-offset);
+}
+
+@media (any-hover: hover) {
+  .product__link:hover {
+    color: var(--primary);
+  }
+}
+.product__link:active{
+  color: var(--border-dark);
+}
+
