--- a/css/blocks/stepper.css
+++ b/css/blocks/stepper.css
@@ -16,8 +16,9 @@
   font-size: 16px;
   color: var(--dark-primary);
   user-select: none;
+  transition: var(--main-trans);
 }
-.stepper__btn--disabled {
+.stepper__btn:disabled {
   pointer-events: none;
   color: var(--border-grey);
 }
@@ -34,4 +35,32 @@
 
 .stepper--cart {
   background-color: var(--light-grey);
+}
+
+.stepper__btn:focus {
+  outline: none;
+}
+
+.stepper__btn:focus-visible {
+  outline: 2px dashed var(--dark-primary);
+  outline-offset: var(--outline-offset);
+}
+
+@media (any-hover: hover) {
+  .stepper__btn:hover {
+    color: var(--primary);
+  }
+}
+.stepper__btn:active {
+  color: var(--border-grey);
+}
+
+
+.stepper__input:focus {
+  outline: none;
+}
+
+.stepper__input:focus-visible{
+  outline: 2px dashed var(--primary);
+  outline-offset: var(--outline-offset);
 }
