--- a/css/blocks/catalog.css
+++ b/css/blocks/catalog.css
@@ -6,6 +6,9 @@
   grid-column: 3 span;
   padding-top: 12px;
 }
+.catalog__mobile-btn {
+  display: none;
+}
 .catalog__wrapper {
   grid-column: 9 span;
 }
