--- a/css/blocks/footer.css
+++ b/css/blocks/footer.css
@@ -32,6 +32,7 @@
   font-size: 14px;
   color: var(--white);
   text-decoration: none;
+  transition: var(--main-trans);
 }
 
 .footer__form .form__input {
@@ -55,4 +56,26 @@
   font-weight: 400;
   font-size: 14px;
   color: var(--white);
+}
+
+
+
+
+
+.footer__link:focus {
+  outline: none;
+}
+
+.footer__link:focus-visible{
+  outline: 2px dashed var(--white);
+  outline-offset: var(--outline-offset);
+}
+
+@media (any-hover: hover) {
+  .footer__link:hover {
+    color: var(--primary);
+  }
+}
+.footer__link:active{
+  color: var(--border-dark);
 }
