--- a/css/blocks/notice.css
+++ b/css/blocks/notice.css
@@ -14,12 +14,36 @@
     display: none;
 }
 
-.notice__text {
-}
-
 .notice__close {
   position: absolute;
   right: 16px;
   top: 50%;
   transform: translateY(-50%);
+  color: var(--white);
+  transition: var(--main-trans);
+}
+
+.notice__close svg {
+  display: block;
+  fill: currentColor;
+}
+
+
+
+.notice__close:focus {
+  outline: none;
+}
+
+.notice__close:focus-visible{
+  outline: 2px dashed var(--white);
+  outline-offset: var(--outline-offset);
+}
+
+@media (any-hover: hover) {
+  .notice__close:hover {
+    color: var(--primary);
+  }
+}
+.notice__close:active{
+  color: var(--border-dark);
 }
